--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -17,7 +17,7 @@ $dark:                            #444 !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
-$RobotoDraftFontPath: "../lib/ionic/robotodraft/fonts/"; // REMINDER: edit as appropriate!
+$RobotoDraftFontPath: "../lib/robotodraft/fonts/"; // REMINDER: edit as appropriate!
 $RobotoDraftFontName: "RobotoDraft";
 $RobotoDraftFontVersion: "1.0.0";
 
