--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -23,24 +23,24 @@ navigation history that also transitions its views in and out.
 
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <!-- Dashboard Tab -->
-  <ion-tab icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- criancaboard Tab -->
+  <ion-tab icon-off="crianca" icon-on="crianca-active" href="#/tab/crianca">
+    <ion-nav-view name="tab-crianca"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <!-- adulto Tab -->
+  <ion-tab icon-off="adultos" icon-on="adultos-active" href="#/tab/adulto">
+    <ion-nav-view name="tab-adulto"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <!-- idoso Tab -->
+  <ion-tab icon-off="idosos" icon-on="idosos-active" href="#/tab/idoso">
+    <ion-nav-view name="tab-idoso"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <!-- idoso Tab -->
+  <ion-tab icon-off="especiais-active" icon-on="especiais-active" href="#/tab/especial">
+    <ion-nav-view name="tab-especial"></ion-nav-view>
   </ion-tab>
 
 
