added android style for navbar and images

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,13 @@
 /* Empty. Add your own CSS if you like */
 
 [nav-bar-transition="ios"] [nav-bar="active"] .bar, [nav-bar-transition="ios"] [nav-bar="entering"] .bar {
-    background: linear-gradient(0deg, #2095c1, #2095c1 50%, #2095c1 50%);
+  background-color: #2095c1;
+  background: linear-gradient(0deg, #2095c1, #2095c1 50%, #2095c1 50%);
+}
+
+[nav-bar-transition="android"] [nav-bar="active"] .bar, [nav-bar-transition="android"] [nav-bar="entering"] .bar {
+  background-color: #2095c1;
+  background: linear-gradient(0deg, #2095c1, #2095c1 50%, #2095c1 50%);
 }
 
 .pane, .view {
