--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,17 +6,22 @@ navigation history that also transitions its views in and out.
 <ion-slide-box on-slide-changed="slideHasChanged($index)" auto-play="true" does-continue="true">
   <ion-slide>
     <div class="box blue">
-      <img src="img/imagem_slide_padrao.jpg" style="width: 100%;" />
+      <img src="img/Imagem_01.png" style="width: 100%;" />
     </div>
   </ion-slide>
   <ion-slide>
     <div class="box yellow">
-      <img src="img/imagem_slide_padrao.jpg" style="width: 100%" />
+      <img src="img/Imagem_02.png" style="width: 100%" />
     </div>
   </ion-slide>
   <ion-slide>
     <div class="box pink">
-      <img src="img/imagem_slide_padrao.jpg" style="width: 100%" />
+      <img src="img/Imagem_03.png" style="width: 100%" />
+    </div>
+  </ion-slide>
+  <ion-slide>
+    <div class="box pink">
+      <img src="img/Imagem_04.png" style="width: 100%" />
     </div>
   </ion-slide>
 </ion-slide-box>
